<resources>
    <string name="app_name">IFMSA El Salvador</string>
    <string name="user_photo_description">User Photo</string>
    <string name="profile_menu">Profile</string>
    <string name="committees_menu">Committees</string>
    <string name="projects_menu">Projects</string>
    <string name="request_project_menu">Request Project</string>
    <string name="configuration_menu">Configuration</string>
    <string name="developers_menu">Developers</string>
    <string name="shared_preferences_key_token">token</string>
    <string name="logo_ifmsa_description">Logo IFMSA</string>
    <string name="committee_photo_description">Committee photo</string>
    <string name="take_part_button">Take part</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="hour_placeholder">Hour</string>
    <string name="date_placeholder">Date</string>
    <string name="banner_description">Banner</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ifmsa_logo_description">IFMSA logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_here_button">Register here</string>
    <string name="user_icon_description">User icon</string>
    <string name="password_icon_description">Password icon</string>
    <string name="empty_fields_message">Fields must not be empty</string>
    <string name="email_hint">Email</string>
    <string name="last_name_hint">Last name</string>
    <string name="first_name_hint">First name</string>
    <string name="email_field_message">Email must contain 1 upper case, 1 lower case, and at least 8 characters</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="password_match_message">Password must match</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="current_year_text">Current year:</string>
    <string name="university_text">University:</string>
    <string name="go_to_login_text">Go to login</string>
    <string name="form_has_been_completed_text">Form has been completed.</string>
    <string name="info_text">Please wait for the mail confirmation to access the application and its functions.</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="project_photo_text">Project photo</string>
    <string name="add_photo_description">Add photo</string>
    <string name="committee_text">Committee</string>
    <string name="request_project_text">Request Project</string>
    <string name="vacancies_hint">Vacancies</string>
    <string name="project_description_hint">Project description</string>
    <string name="project_place_hint">Project place</string>
    <string name="project_name_hint">Project name</string>
    <string name="project_date_text">Project date</string>
    <string name="project_time_text">Project hour</string>
    <string name="join_text">Join</string>
    <string name="project_committee_description">Project committee</string>
    <string name="project_photo_description">Project photo</string>

    <string-array name="colleges_array">
        <item>Universidad Dr. José Matías Delgado</item>
        <item>Universidad Evangélica de El Salvador</item>
        <item>Universidad Autónoma de Santa Ana</item>
    </string-array>

    <string-array name="years_array">
        <item>1°</item>
        <item>2°</item>
        <item>3°</item>
        <item>4°</item>
        <item>5°</item>
        <item>6°</item>
        <item>7°</item>
        <item>8°</item>
    </string-array>
</resources>
