<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_ifmsa_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/form_has_been_completed_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_36dp"
        android:gravity="center"
        android:text="@string/info_text"
        android:textSize="@dimen/_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button_go_to_login"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_edge"
            android:text="@string/go_to_login_text"
            android:textColor="@color/indigo_500"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
