<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/logo"
        layout="@layout/layout_ifmsa_logo" />

    <LinearLayout
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_25dp"
                    android:layout_marginStart="@dimen/_25dp"
                    android:contentDescription="@string/user_icon_description"
                    android:src="@drawable/user_icon" />

                <EditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25dp"
                    android:layout_marginLeft="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_25dp"
                    android:layout_marginStart="@dimen/_4dp"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_25dp"
                    android:layout_marginStart="@dimen/_25dp"
                    android:contentDescription="@string/password_icon_description"
                    android:src="@drawable/password_user" />

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_25dp"
                    android:layout_marginLeft="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_25dp"
                    android:layout_marginStart="@dimen/_4dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_edge"
            android:elevation="2dp"
            android:gravity="center"
            android:text="@string/login_button"
            android:textColor="@color/indigo_500"
            android:textStyle="bold"
            tools:targetApi="lollipop" />


        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:text="@string/register_here_button"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/forgot_pass_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>