<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_ifmsa_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/university_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_36dp"
            android:layout_marginTop="@dimen/_28dp">

            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/university_text"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp" />

            <Spinner
                android:id="@+id/spinner_university"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_select"
            android:layout_below="@id/university_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp">

            <TextView
                android:id="@+id/selectedYear"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_year_text"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp" />

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/year_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>