<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_project_photo_cardview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150dp"
            android:contentDescription="@string/committee_photo_description"
            android:src="@color/indigo_200" />

        <LinearLayout
            android:id="@+id/linear_layout_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_project_photo_cardview"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:id="@+id/text_view_project_name_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_project"
            android:layout_margin="@dimen/_8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_place_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_place"
            android:layout_margin="@dimen/_8dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/date_placeholder"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_date_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/hour_placeholder"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_hour_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car"
            android:layout_margin="@dimen/_16dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_take_part_cardview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_edge"
                android:text="@string/take_part_button" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>